--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -90,7 +90,16 @@
     "update": "Cập nhật",
     "updating": "Đang cập nhật",
     "confirm": "Xác nhận",
-    "no_data": "Không có"
+    "no_data": "Không có",
+    "back": "Quay lại",
+    "action": "Hành động",
+    "edit": "Chỉnh sửa",
+    "save": "Lưu",
+    "backToDetail": "Quay lại chi tiết",
+    "approve": "Duyệt đơn",
+    "reject": "Hủy yêu cầu",
+    "unknown": "Không rõ",
+    "noNote": "Không có ghi chú"
   },
   "homepage": {
     "mango_desc_1": "Nhắc đến các loại trái cây miền nhiệt đới không thể nào không nhắc đến quả xoài. Tại Việt Nam, xoài được trồng từ Nam chí Bắc, vùng trồng xoài tập trung từ Bình Định trở vào, và được trồng nhiều nhất ở các tỉnh Đồng bằng Sông Cửu Long như Bến Tre, Tiền Giang, Đồng Tháp, Vĩnh Long, Cần Thơ,… Việt Nam là nước đứng thứ 13 về sản xuất xoài trên thế giới.",
@@ -206,7 +215,10 @@
     "failed": "Thất bại",
     "disable": "Vô hiệu hóa",
     "imported": "Nhập kho thành công",
-    "importFailed": "Nhập kho thất bại"
+    "importFailed": "Nhập kho thất bại",
+    "preparing": "Đang chuẩn bị",
+    "waitingExport": "Chờ xuất kho",
+    "exported": "Đã xuất kho"
   },
   "navbar": {
     "search_placeholder": "Bạn đang tìm kiếm gì?",
@@ -855,5 +867,118 @@
     "quantity": "Số Lượng",
     "price": "Giá Tiền",
     "receiptType": "Loại Đơn Hàng"
+  },
+  "fuelStorage": {
+    "confirmTitle": {
+      "approve": "Xác nhận duyệt đơn",
+      "cancel": "Xác nhận hủy đơn"
+    },
+    "confirmContent": {
+      "approve": "Bạn có chắc chắn muốn duyệt đơn này không?",
+      "cancel": "Bạn có chắc chắn muốn hủy đơn này không?"
+    },
+    "confirm": {
+      "okText": "Đồng ý",
+      "cancelText": "Hủy"
+    },
+    "updateSuccess": "Cập nhật trạng thái thành công: {{status}}",
+    "updateFail": "Cập nhật trạng thái thất bại!",
+    "serverError": "Không thể kết nối đến máy chủ!",
+    "noDataToExport": "Không có dữ liệu để xuất!",
+    "columns": {
+      "manager": "Người Quản Lý",
+      "receiptType": "Loại Đơn Hàng",
+      "storage": "Kho",
+      "status": "Trạng Thái",
+      "createdAt": "Ngày Nhập Kho",
+      "updatedAt": "Ngày Cập Nhật",
+      "quantity": "Số lượng",
+      "note": "Ghi chú",
+      "action": "Thao tác"
+    },
+    "unknown": "Không xác định",
+    "receiptType": {
+      "supply": "Cung cấp",
+      "request": "Thu hàng"
+    },
+    "noDataShort": "Không có",
+    "drawerTitle": "Chi tiết đơn nhập kho",
+    "back": "Quay lại",
+    "title": "Danh sách Đơn Nhập Kho",
+    "approve": "Duyệt"
+  },
+  "materialBatch": {
+    "title": "Quản lý Lô Nguyên Liệu",
+    "batchId": "Mã lô",
+    "batchName": "Tên lô",
+    "fuelType": "Loại nguyên liệu",
+    "quantity": "Số lượng (Kg)",
+    "storage": "Kho lưu trữ",
+    "status": "Trạng thái",
+    "note": "Ghi chú",
+    "createExportOrder": "Tạo đơn xuất kho",
+    "updateTitle": "Cập nhật Lô Nguyên Liệu",
+    "detailTitle": "Chi tiết Lô Nguyên Liệu",
+    "estimatedProduction": "Sản lượng mong muốn (Kg)",
+    "requiredMaterialEstimate": "Số lượng nguyên liệu cần thiết ước tính (Kg)",
+    "selectFuelType": "Chọn loại Nguyên liệu",
+    "enterEstimatedProduction": "Nhập sản lượng mong muốn",
+    "selectStorage": "Chọn kho lưu trữ"
+  },
+  "validation": {
+    "requiredBatchId": "Vui lòng nhập mã lô",
+    "requiredBatchName": "Vui lòng nhập tên lô",
+    "requiredFuelType": "Vui lòng chọn loại nguyên liệu",
+    "requiredProduction": "Vui lòng nhập sản lượng mong muốn!",
+    "requiredStorage": "Vui lòng chọn kho lưu trữ",
+    "requiredBatch": "Vui lòng chọn lô nguyên liệu",
+    "requiredProductionOrder": "Vui lòng chọn đơn sản xuất",
+    "requiredExportName": "Vui lòng nhập tên đơn xuất kho"
+  },
+  "messages": {
+    "notLoggedIn": "Bạn chưa đăng nhập.",
+    "userIdNotFound": "Không tìm thấy ID người dùng.",
+    "userFetchFailed": "Không thể lấy thông tin người dùng.",
+    "userFetchError": "Lỗi khi lấy thông tin người dùng từ server.",
+    "dataFetchError": "Lỗi khi tải dữ liệu từ server.",
+    "userNotFound": "Không tìm thấy thông tin người dùng.",
+    "unknownError": "Lỗi không xác định!",
+    "createSuccess": "Tạo đơn xuất kho thành công!",
+    "fetchExportListError": "Lỗi khi lấy danh sách đơn xuất kho!",
+    "connectionError": "Không thể kết nối đến server!",
+    "approveSuccess": "Duyệt đơn thành công",
+    "approveError": "Lỗi khi duyệt đơn hoặc cập nhật trạng thái!",
+    "notFound": "Không tìm thấy đơn xuất kho!",
+    "fetchDetailError": "Lỗi khi lấy chi tiết đơn xuất kho!",
+    "deleteSuccess": "Xóa đơn thành công",
+    "deleteError": "Xóa đơn thất bại"
+  },
+  "materialExport": {
+    "title": "Tạo Đơn Xuất Kho",
+    "createdBy": "Người tạo đơn:",
+    "selectBatch": "Chọn Lô nguyên liệu",
+    "selectBatchPlaceholder": "Chọn lô nguyên liệu",
+    "selectProduction": "Chọn Đơn sản xuất",
+    "selectProductionPlaceholder": "Chọn đơn sản xuất",
+    "exportName": "Tên đơn xuất kho",
+    "exportNamePlaceholder": "Nhập tên đơn xuất kho",
+    "exportType": "Loại đơn",
+    "productionType": "Đơn sản xuất",
+    "note": "Ghi chú",
+    "notePlaceholder": "Nhập ghi chú"
+  },
+  "materialExportList": {
+    "title": "Quản lý Đơn Xuất Kho",
+    "exportType": "Loại Xuất Kho",
+    "productionRequest": "Đơn sản xuất",
+    "batch": "Lô nguyên liệu",
+    "status": "Trạng thái",
+    "detailTitle": "Chi tiết Đơn Xuất Kho",
+    "createdBy": "Người tạo đơn",
+    "batchName": "Tên lô",
+    "batchId": "Mã lô",
+    "exportName": "Tên Xuất Kho",
+    "createdDate": "Ngày tạo đơn",
+    "note": "Ghi chú"
   }
 }
