--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -62,6 +62,7 @@
   "logout": "Logout",
   "account": "Account",
   "export_excel": "Export Excel",
+  "create_process": "Create process",
   "carousel": {
     "view_more": "View more",
     "title_2": "CAREFUL SELECTION",
@@ -105,7 +106,10 @@
     "noNote": "No note available",
     "viewDetail": "View Detail",
     "enterQuantity": "Enter quantity...",
-    "enterNote": "Enter note..."
+    "enterNote": "Enter note...",
+    "ok": "OK",
+    "reset": "Reset",
+    "notEnded": "Not yet ended"
   },
   "homepage": {
     "mango_desc_1": "When it comes to tropical fruits, mangoes are always worth mentioning. In Vietnam, mangoes are grown from North to South, mostly concentrated from Binh Dinh southward, and especially in the Mekong Delta provinces such as Ben Tre, Tien Giang, Dong Thap, Vinh Long, and Can Tho. Vietnam ranks 13th in the world in mango production.",
@@ -224,7 +228,8 @@
     "importFailed": "Storage Failed",
     "preparing": "Preparing",
     "waitingExport": "Waiting for Export",
-    "exported": "Exported"
+    "exported": "Exported",
+    "in_production": "In Production"
   },
   "navbar": {
     "search_placeholder": "What are you looking for?",
@@ -733,7 +738,13 @@
     "supplier": "Supplier",
     "status": "Status",
     "quantity": "Quantity",
-    "created_at": "Created At"
+    "created_at": "Created At",
+    "request_name": "Request Name",
+    "product_quantity": "Product Quantity (Kg)",
+    "material_quantity": "Material Quantity (Kg)",
+    "production_date": "Start Date",
+    "end_date": "End Date",
+    "actions": "Actions"
   },
   "fuel_request": {
     "back": "Go Back",
@@ -940,7 +951,16 @@
     "requiredStorage": "Please select a storage",
     "requiredBatch": "Please select a batch",
     "requiredProductionOrder": "Please select a production request",
-    "requiredExportName": "Please enter the export order name"
+    "requiredExportName": "Please enter the export order name",
+    "planNameRequired": "Please enter plan name",
+    "materialRequired": "Please select material type",
+    "materialQtyRequired": "Please enter material quantity",
+    "lossRequired": "Please enter loss percentage",
+    "priorityRequired": "Please select priority",
+    "productionDateRequired": "Please select production date",
+    "endDateRequired": "Please select end date",
+    "mustBeGreaterThanZero": "Value must be greater than 0",
+    "lossPercentageRange": "Percentage must be between 0 and 100"
   },
   "messages": {
     "notLoggedIn": "You are not logged in.",
@@ -950,7 +970,7 @@
     "dataFetchError": "Error loading data from server.",
     "userNotFound": "User information not found.",
     "unknownError": "Unknown error occurred!",
-    "createSuccess": "Export order created successfully!",
+    "createSuccess": "Order created successfully!",
     "fetchExportListError": "Failed to load export list!",
     "connectionError": "Unable to connect to server!",
     "approveSuccess": "Order approved successfully",
@@ -958,7 +978,13 @@
     "notFound": "Export order not found!",
     "fetchDetailError": "Failed to retrieve export order details!",
     "deleteSuccess": "Order deleted successfully",
-    "deleteError": "Failed to delete order"
+    "deleteError": "Failed to delete order",
+    "fetchFuelError": "Error loading material list.",
+    "selectFuelFirst": "Please select material before entering desired output.",
+    "materialOverLimit": "Desired output exceeds current stock. Max output: {{max}} Kg.",
+    "materialStockExceeded": "Entered quantity exceeds available stock ({{available}} Kg).",
+    "createFail": "Failed to create production request!",
+    "submitError": "An error occurred while creating the production request."
   },
   "materialExport": {
     "title": "Create Material Export Order",
@@ -1003,5 +1029,225 @@
     "createdDate": "Created Date",
     "exportDate": "Exported Date",
     "note": "Note"
+  },
+  "dashboardProduction": {
+    "title": "Production Process Dashboard",
+    "chartTitle": "Process Status Chart"
+  },
+  "productionRequest": {
+    "title": "Create Production Plan",
+    "planList": "Plan List",
+    "name": "Plan Name",
+    "namePlaceholder": "Enter plan name",
+    "material": "Material Type",
+    "selectMaterial": "Select material",
+    "materialQty": "Material Quantity (kg)",
+    "enterMaterialQty": "Enter material quantity",
+    "loss": "Loss Percentage (%)",
+    "enterLoss": "Enter loss percentage",
+    "productQty": "Estimated Product Output (kg)",
+    "priority": "Priority",
+    "selectPriority": "Select priority level",
+    "productionDate": "Production Date",
+    "selectProductionDate": "Select production date",
+    "endDate": "End Date",
+    "note": "Note",
+    "enterNote": "Enter note (optional)"
+  },
+  "priority": {
+    "high": "High",
+    "medium": "Medium",
+    "low": "Low"
+  },
+  "productionRequestManagement": {
+    "title": "Production Plan List"
+  },
+  "form": {
+    "request_name": "Request Name",
+    "request_type": "Request Type",
+    "material": "Material",
+    "product_quantity": "Product Quantity (Kg)",
+    "material_quantity": "Material Quantity (Kg)",
+    "production_date": "Production Date",
+    "end_date": "End Date",
+    "status": "Status",
+    "note": "Note",
+    "update_title": "Update Request"
+  },
+  "action": {
+    "edit": "Edit",
+    "approve": "Approve",
+    "save": "Save",
+    "cancel": "Cancel",
+    "create_process": "Create Process",
+    "create_batch_process": "Create Batch Process"
+  },
+  "hint": {
+    "create_plan_process": "+ Create a <1>(plan)</1> process by clicking the icon",
+    "create_batch_process": "+ Create a <1>(batch)</1> process by clicking the button"
+  },
+  "modal": {
+    "delete_confirm_title": "Confirm Deletion",
+    "delete_confirm_content": "Are you sure you want to delete this production request?"
+  },
+  "warning": {
+    "over_fuel": "Requested quantity exceeds available material. Max allowed is {{max}} Kg."
+  },
+  "drawer": {
+    "detail_title": "Production Request Details"
+  },
+  "validate": {
+    "request_name": "Please enter request name",
+    "material": "Please select a material",
+    "product_quantity": "Please enter quantity",
+    "production_date": "Please select production date",
+    "end_date": "Please select end date"
+  },
+  "placeholder": {
+    "select_material": "Select material type"
+  },
+  "notification": {
+    "after_approve": "After approval, the requests will be placed in the production queue",
+    "production_queue": "Production Queue"
+  },
+  "page": {
+    "title": "Pending Requests to Process"
+  },
+  "productionProcess": {
+    "title": {
+      "list": "Created Production Processes"
+    },
+    "button": {
+      "back": "Back",
+      "single": "Single Process",
+      "consolidated": "Consolidated Process",
+      "update": "Update",
+      "approve": "Approve",
+      "save": "Save",
+      "cancel": "Cancel"
+    },
+    "label": {
+      "processType": "Process Type"
+    },
+    "confirm": {
+      "approveTitle": "Confirm process approval?",
+      "approveContent": "Are you sure you want to approve this process?"
+    },
+    "message": {
+      "approveSuccess": "Process approved successfully!",
+      "approveFail": "Approval failed, please try again.",
+      "updateSuccess": "Update successful!",
+      "updateFail": "Update failed, please try again.",
+      "onlyPending": "Only processes in 'Pending Approval' status can be updated!"
+    },
+    "drawer": {
+      "detailTitle": "Production Process Details",
+      "editTitle": "Update Production Process"
+    },
+    "form": {
+      "production_name": "Process Name",
+      "start_time": "Start Date",
+      "end_time": "End Date",
+      "note": "Note",
+      "validation": {
+        "required": "Please enter the required information!",
+        "startRequired": "Please select the start date!",
+        "endRequired": "Please select the end date!",
+        "endAfterStart": "End date must be after the start date!"
+      }
+    },
+    "field": {
+      "_id": "Process ID",
+      "production_name": "Process Name",
+      "status": "Status",
+      "start_time": "Start Time",
+      "end_time": "End Time",
+      "note": "Note",
+      "processed_quantity": "Processed Quantity",
+      "waste_quantity": "Waste Quantity",
+      "production_request": "Production Request",
+      "stage1": "Stage 1",
+      "stage2": "Stage 2",
+      "stage3": "Stage 3",
+      "stage4": "Stage 4",
+      "stage5": "Stage 5",
+      "stage6": "Stage 6"
+    }
+  },
+  "processingManagement": {
+    "title": {
+      "executingProcesses": "Executing Production Processes"
+    },
+    "button": {
+      "back": "Back",
+      "single": "Single Process",
+      "consolidated": "Consolidated Process"
+    },
+    "label": {
+      "processType": "Process Type"
+    },
+    "message": {
+      "loadError": "An error occurred while loading process data"
+    }
+  },
+  "histories": {
+    "title": "Process History",
+    "field": {
+      "processCode": "Process Code",
+      "processName": "Process Name",
+      "start": "Start Time",
+      "end": "End Time",
+      "status": "Status",
+      "action": "Action"
+    },
+    "button": {
+      "viewDetails": "View Details"
+    }
+  },
+  "processDetails": {
+    "label": {
+      "status": "Status:"
+    },
+    "status": {
+      "executing": "Executing",
+      "waiting": "Waiting",
+      "done": "Completed"
+    },
+    "info": {
+      "start": "Start Time",
+      "etaEnd": "ETA End Time",
+      "currentStage": "Current Stage",
+      "status": "Status",
+      "assignedUser": "Assigned User",
+      "note": "Note"
+    },
+    "stages": {
+      "stage1": "Ingredient Sorting",
+      "stage2": "Washing and Cleaning",
+      "stage3": "Surface Disinfection",
+      "stage4": "Bio-coating & Drying",
+      "stage5": "Ripening (Temp/Humidity Control)",
+      "stage6": "Final Packaging",
+      "stage7": "Labeling & Traceability"
+    },
+    "message": {
+      "completeSuccess": "Stage marked as complete successfully",
+      "completeError": "An error occurred while completing the stage"
+    }
+  },
+  "stage": {
+    "title": "Stage {{no}}",
+    "field": {
+      "start": "Start Time",
+      "end": "End Time",
+      "status": "Status",
+      "user": "Assigned User",
+      "note": "Note"
+    },
+    "button": {
+      "complete": "Complete"
+    },
+    "empty": "Process not yet executed",
+    "system": "system"
   }
 }
