--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -1223,7 +1223,7 @@
     },
     "stages": {
       "stage1": "Phân loại nguyên liệu",
-      "stage2": "Rửa – gọt vỏ – cắt lát",
+      "stage2": "Rửa – gọt vỏ - tách hạt – cắt lát",
       "stage3": "Chần để ức chế enzyme",
       "stage4": "Điều vị (ngâm đường/muối)",
       "stage5": "Sấy (máy sấy lạnh hoặc đối lưu)",
