notification for api manage/block user, fix ui

--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -648,7 +648,7 @@
   },
   "order": {
     "back": "Quay lại",
-    "title": "các nguyên liệu cần nhập",
+    "title": "Các nguyên liệu cần nhập",
     "drawer_title": "Chi Tiết Đơn Thu Nguyên liệu",
     "update_title": "Cập Nhật Đơn Thu Nguyên liệu",
     "form": {
